# MCP

./: .gitignore  m.py  pyproject.toml  readme.md  requirements.txt
1/: mcp_config_explained.json  requirements.txt  simple_agent.py
Community Servers/: main.py  pyproject.toml
Community Servers/src-mcp/: agenti loop.py  direct api calls.py  function calling.py
Docs-sheet-mcp/: Direct-Api.py  main.py  readme.md  requirements.txt  test-credentials.py
Notion-server-/: hugging-mcp.py  main.py  package.json
Notion_MCP_Agent/: pyproject.toml  requirements.txt
Notion_MCP_Agent/src/notion_mcp_agent/: main.py
Remot-server/: package-lock.json  ready-remot.py
crash-course/: .env.example  README.md  requirements.txt
crash-course/1-introduction-and-context/: README.md
crash-course/2-understanding-mcp/: README.md
crash-course/3-simple-server-setup/: README.md  client-sse.py  client-stdio.py  client-streamable-http.py  server.py
crash-course/4-openai-integration/: README.md  client-simple.py  client.py  server.py
crash-course/4-openai-integration/data/: kb.json
crash-course/5-mcp-vs-function-calling/: README.md  function-calling.py  tools.py
crash-course/6-run-with-docker/: Dockerfile  README.md  server.py
crash-course/7-lifecycle-management/: README.md
mcp-notion-email/: README.md  config.py  demo.py  groq_agent.py  mcp_manager.py  requirements.txt
